# teamchat

./: .coverage  .gitignore  .pdm-python  240826_2_messages.json  240826_messages.json  README.md  pyproject.toml  team6_240826_1_messages.json  test1_messages.json
src/teamchat/: call.py  con.py  pro.py
src/teamchat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/teamchat/api/: call.py  chat.py  chat3.py
src/teamchat/py/: get_json.py  notify.py
tests/: test_call.py
